[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/actors/Team.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprite/tilesheet_transparent.png" type="Texture" id=3]
[ext_resource path="res://scripts/CapturableBase.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 40 )

[node name="CapturableBase" type="Area2D"]
z_index = -2
script = ExtResource( 4 )

[node name="Team" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 394, 71, 10, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CaptureTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_CapturableBase_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CapturableBase_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
